--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/leaflet": "^1.5.8",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
