--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.1.0",
     "leaflet": "^1.6.0",
     "normalizr": "^3.5.0",
+    "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.9.5",
